Reorder index so Chromium can parse, fix typo
Somehow Chromium was unable to detect the manifest file when the script was placed about it, now it does.

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Galaxy Collection",
   "icons": [
     {
-      "src": "maskable-icon-adptive.svg",
+      "src": "maskable-icon-adaptive.svg",
       "type": "image/svg+xml",
       "purpose": "maskable monochrome",
       "sizes": "512x512"
