--- a/manifest.json
+++ b/manifest.json
@@ -40,6 +40,7 @@
     }
   ],
   "background_color" : "black",
+  "theme_color": "black",
   "start_url": "index.html",
   "display": "fullscreen",
   "related_applications": [{
