--- a/manifest.json
+++ b/manifest.json
@@ -5,37 +5,61 @@
     {
       "src": "maskable-icon-adaptive.svg",
       "type": "image/svg+xml",
-      "purpose": "maskable monochrome",
+      "purpose": "maskable",
       "sizes": "512x512"
     },
     {
       "src": "maskable-icon-512.png",
       "type": "image/png",
-      "purpose": "maskable monochrome",
+      "purpose": "maskable",
       "sizes": "512x512"
     },
     {
       "src": "maskable-icon-192.png",
-      "purpose": "maskable monochrome",
       "type": "image/png",
+      "purpose": "maskable",
       "sizes": "192x192"
     },
     {
       "src": "icon-adaptive.svg",
       "type": "image/svg+xml",
-      "purpose": "any monochrome",
+      "purpose": "any",
       "sizes": "512x512"
     },
     {
       "src": "icon-512.png",
       "type": "image/png",
-      "purpose": "any monochrome",
+      "purpose": "any",
       "sizes": "512x512"
     },
     {
       "src": "icon-192.png",
-      "purpose": "any monochrome",
       "type": "image/png",
+      "purpose": "any",
+      "sizes": "192x192"
+    },
+    {
+      "src": "maskable-monochrome-icon-512.png",
+      "type": "image/png",
+      "purpose": "maskable monochrome",
+      "sizes": "512x512"
+    },
+    {
+      "src": "maskable-monochrome-icon-192.png",
+      "type": "image/png",
+      "purpose": "maskable monochrome",
+      "sizes": "192x192"
+    },
+    {
+      "src": "monochrome-icon-512.png",
+      "type": "image/png",
+      "purpose": "any monochrome",
+      "sizes": "512x512"
+    },
+    {
+      "src": "monochrome-icon-192.png",
+      "type": "image/png",
+      "purpose": "any monochrome",
       "sizes": "192x192"
     }
   ],
