Add window control overview display override for desktop PWA
Enables hiding of most of the titlebar and for app to be displayed behind it, without entering fullscreen

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,6 +4,7 @@
   "name": "Galaxy Collection",
   "description":"A remake of the discontinued Star Wars Force Collection game",
   "display": "fullscreen",
+  "display_override": ["window-controls-overlay"],
   "background_color" : "black",
   "theme_color": "black",
   "related_applications": [{
